--- a/unit1/week_5/hogwarts/style.css
+++ b/unit1/week_5/hogwarts/style.css
@@ -14,3 +14,9 @@ main {
 li {
     list-style-type: none;
 }
+table {
+    border-color: gray;
+    border-style: solid;
+    border-width: 1px;
+    text-align: center;
+}
