--- a/unit1/week_6/Lord of the rings/style.css
+++ b/unit1/week_6/Lord of the rings/style.css
@@ -35,6 +35,11 @@ body {
   background-color: rgba(0,0,0,0.3); /*dim the background*/
 }
 
+.the-white {
+  background-color: white;
+  border-color: gray;
+}
+
 section {
   font-weight: bold;
   position: absolute;
