--- a/unit2/week_10/week10-homework-pokedex/public/css/styles.css
+++ b/unit2/week_10/week10-homework-pokedex/public/css/styles.css
@@ -1,4 +1,23 @@
-table { 
+body{
+    font-family: 'Josefin Sans', sans-serif;
+}
+main {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: lightgray;
+}
+.info {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border: solid 2px black;
     text-align: center;
-    border: 2%;
+    padding: 2%;
+    margin: 2%;
+}
+h1, h2 {
+    text-align: center;
 }
