--- a/unit3/Bookmark_d/Bookmark_front_end/bookmark_client/src/index.css
+++ b/unit3/Bookmark_d/Bookmark_front_end/bookmark_client/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h2 {
+  background-color:lightgrey;
+  margin: 20%;
+  padding: 1%;
+}
+
+.edit, .delete, .bookmark {
+  margin: 2%;
+  border-radius: 10%;
+}
